apps/misc/meerkat/40-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meerkat
  namespace: meerkat
spec:
  selector:
    app: meerkat
  ports:
    - port: 80
      targetPort: 8080
