apps/misc/meerkat/53-httproute-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: meerkat-internal
  namespace: meerkat
spec:
  parentRefs:
    - name: main
      namespace: envoy-gateway-system
      sectionName: https-internal-white-fm
  hostnames:
    - meerkat.internal.white.fm
  rules:
    - backendRefs:
        - name: meerkat
          port: 80
